Fixing #85: nav content should be hidden when collapsed

--- a/src/AppBundle/Resources/public/sass/base.scss
+++ b/src/AppBundle/Resources/public/sass/base.scss
@@ -663,6 +663,9 @@ a.btn-primary {
   #navbar {
     display: block;
   }
+  #navbar[aria-expanded='false'] > ul.nav{
+    display:none;
+  }
   .navbar-default .navbar-nav {
     float: none;
     width: 100%;
